other/restrict-pod-controller-serviceaccount-updates/.chainsaw-test/deploy-bad-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      serviceAccountName: serviceaccount02
      containers:
      - name: busybox
        image: busybox:1.35
